<resources>
    <string name="app_name">guessTheName</string>
    <string name="heading">Guess The Player Name</string>
    <string name="btnSubmit">Submit Letter</string>
    <string name="DescriptionPlayerImage">Player Image</string>
    <string name="DescriptionImg_0">Grid 1 Cropped Player Image</string>
    <string name="DescriptionImg_1">Grid 2 Cropped Player Image</string>
    <string name="DescriptionImg_2">Grid 3 Cropped Player Image</string>
    <string name="DescriptionImg_3">Grid 4 Cropped Player Image</string>
    <string name="DescriptionImg_4">Grid 5 Cropped Player Image</string>
    <string name="DescriptionImg_5">Grid 6 Cropped Player Image</string>
    <string name="DescriptionImg_6">Grid 7 Cropped Player Image</string>
    <string name="DescriptionImg_7">Grid 8 Cropped Player Image</string>
    <string name="DescriptionImg_8">Grid 9 Cropped Player Image</string>
    <string name="guessChar">Guess a Letter</string>
    <string name="playAgain">Do you want to play again?</string>
    <string name="yes">Yes</string>
    <string name="quit">Quit</string>
    <string name="timer">Count Down</string>
    <string name="lives">Lives</string>
    <string name="chosenPlayer">This is the name to be guessed</string>
    <string name="enterLetter">Enter a letter to guess</string>
    <string name="hint">This is the hint to guess.</string>
</resources>
