<?xml version="1.0" encoding="utf-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:contentDescription="@string/heading">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textColor="@color/blue"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            tools:ignore="InefficientWeight">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_marginLeft="50dp"
                tools:ignore="RtlHardcoded"
                android:textColor="@color/blue"
                android:contentDescription="@string/timer">
            </TextView>

            <TextView
                android:id="@+id/lives"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp"
                android:layout_marginRight="50dp"
                tools:ignore="RtlHardcoded"
                android:textColor="@color/blue"
                android:contentDescription="@string/lives">
            </TextView>

        </LinearLayout>

        <GridLayout
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:rowCount="3"
            android:columnCount="3"
            tools:ignore="UselessParent"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_border"
            android:contentDescription="@string/DescriptionPlayerImage">

            <ImageView
                android:id="@+id/image_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_0">
            </ImageView>
            <ImageView
                android:id="@+id/image_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_1">
            </ImageView>
            <ImageView
                android:id="@+id/image_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_2">
            </ImageView>
            <ImageView
                android:id="@+id/image_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_3">
            </ImageView>
            <ImageView
                android:id="@+id/image_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_4">
            </ImageView>
            <ImageView
                android:id="@+id/image_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_5">
            </ImageView>
            <ImageView
                android:id="@+id/image_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_6">
            </ImageView>
            <ImageView
                android:id="@+id/image_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_7">
            </ImageView>
            <ImageView
                android:id="@+id/image_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:padding="1dp"
                android:scaleType="fitXY"
                android:background="@drawable/crop_image_border"
                android:contentDescription="@string/DescriptionImg_8">
            </ImageView>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hint"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/hint">
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/playerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:letterSpacing="0.2"
                android:contentDescription="@string/chosenPlayer">
            </TextView>

            <EditText
                android:id="@+id/guessChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:gravity="center"
                android:background="@null"
                android:cursorVisible="false"
                tools:ignore="contentDescription">
            </EditText>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
